# deep_peak_sieve

./: '  .gitignore  README.md  config.json  inception_time2.py  pyproject.toml  requirements.tex  requirements.txt  test.py
lightning_logs/version_0/: events.out.tfevents.1744374348.polarbear.3163714.0
lightning_logs/version_0/checkpoints/: epoch=105-step=848.ckpt
lightning_logs/version_1/: events.out.tfevents.1744374480.polarbear.3171641.0
lightning_logs/version_1/checkpoints/: epoch=49-step=400.ckpt
lightning_logs/version_2/: events.out.tfevents.1744374636.polarbear.3177709.0
lightning_logs/version_2/checkpoints/: epoch=99-step=800.ckpt
lightning_logs/version_3/: events.out.tfevents.1744374946.polarbear.3190377.0
lightning_logs/version_4/: events.out.tfevents.1744375436.polarbear.3209134.0
lightning_logs/version_5/: events.out.tfevents.1744375713.polarbear.3219627.0
lightning_logs/version_5/checkpoints/: epoch=99-step=800.ckpt
lightning_logs/version_6/: events.out.tfevents.1744376008.polarbear.3231380.0  hparams.yaml
lightning_logs/version_6/checkpoints/: epoch=199-step=1600.ckpt
src/deep_peak_sieve/: cli.py  exploration.py  requirements.txt  style.py  train_classifier.py
src/deep_peak_sieve/classification/: classify_peaks.py  train_classifier.py
src/deep_peak_sieve/collection/: collect_peaks.py
src/deep_peak_sieve/data/: dataloaders.py
src/deep_peak_sieve/labeling/: label_peaks.py
src/deep_peak_sieve/models/: base.py  betavae.py  inception_time.py  params.py  utils.py  vae.py  vaeeg.py
src/deep_peak_sieve/modules/: blocks.py
src/deep_peak_sieve/prepro/: collect_peaks.py  filters.py
src/deep_peak_sieve/sampling/: sample_peaks.py
src/deep_peak_sieve/utils/: datasets.py  devices.py  loggers.py  metrics.py
src/thunderpulse/: app.py  exploration.py
src/thunderpulse/assets/: custom_css.css  style.py
src/thunderpulse/classification/: classify_peaks.py  train_classifier.py
src/thunderpulse/collection/: collect_peaks.py  filters.py
src/thunderpulse/config/: config.py
src/thunderpulse/data_handling/: __init__.py  data.py  filters.py  preprocessing.py  to_nix.py
src/thunderpulse/dsp/: common_reference.py  filters.py
src/thunderpulse/embedding/: base.py  umap.py
src/thunderpulse/graphs/: __init__.py  channel_selection.py  dashumap.py  data_selection.py  probe.py  psd.py  spikes_ampl.py  traces.py  waveforms.py
src/thunderpulse/labeling/: label_peaks.py
src/thunderpulse/models/: base.py  betavae.py  inception_time.py  utils.py  vaeeg.py
src/thunderpulse/nn/: betavae.py  embedders.py  utils.py  vae.py  vaeeg.py
src/thunderpulse/processing/: __init__.py  autoencoder.py  calc_umap.py  io.py  peak_detection.py  preprocessing.py  save_processing.py  to_nix.py  waveforms.py
src/thunderpulse/pulse_detection/: collect_peaks.py  config.py  detection.py  params_test_dashboard.py
src/thunderpulse/pulse_filtering/: classify_peaks.py  fit_umap.py  label_peaks.py  sample_all_pulses_single_file.py  sample_peaks.py  sample_peaks_nix.py
src/thunderpulse/sampling/: sample_peaks.py
src/thunderpulse/ui/: __init__.py  channel_slider.py  layout_config_tabs.py  layout_probe_graph.py  layout_visualization_tabs.py  time_slider.py
src/thunderpulse/ui/callbacks/: __init__.py  io_card_callbacks.py  preprocessing_card_callbacks.py
src/thunderpulse/ui/config_tabs/: __init__.py  cluster_card.py  io_card.py  peak_table_card.py  preprocessing_card.py
src/thunderpulse/ui/ui_callbacks/config_tabs/: preprocessing_card.py
src/thunderpulse/ui/ui_callbacks/graphs/: data_selection.py
src/thunderpulse/ui_callbacks/: __init__.py  channel_slider.py  keyboard_shortcuts.py  peak_table.py  pulse_detection_config.py  save_processing.py  time_slider.py
src/thunderpulse/ui_callbacks/config/: __init__.py  classifcation_card.py  detection_card.py  filter_card.py  load.py  offcanvas.py  path_card.py  save.py
src/thunderpulse/ui_callbacks/config_tabs/: __init__.py  io_card.py  offcanvas.py  preprocessing_card.py
src/thunderpulse/ui_callbacks/graphs/: channel_selection.py  dashumap.py  probe.py  psd.py  traces.py  waveforms.py
src/thunderpulse/ui_layout/: __init__.py  channel_slider.py  peak_table.py  probe_graph.py  time_slider.py
src/thunderpulse/ui_layout/config/: __init__.py  classification_card.py  combine.py  filter_card.py  paths_card.py  pulse_detection.py  pulse_detection_card.py
src/thunderpulse/ui_layout/config_navbar/: __init__.py  combine_navbars.py  filter_card.py  io_card.py  preprocessing_card.py
src/thunderpulse/ui_layout/config_tabs/: combine_config_cards.py  io_card.py  preprocessing_card.py
src/thunderpulse/utils/: check_config.py  data.py  datasets.py  devices.py  filter.py  loggers.py  logging_setup.py  viz.py
