[project]
name = "thunderpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioio",
    "dash>=3.0.3",
    "dash-bootstrap-components>=2.0.2",
    "humanize>=4.12.2",
    "ipython>=9.1.0",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "neo>=0.14.1",
    "nixio>=1.5.4",
    "orjson>=3.10.16",
    "polars>=1.27.1",
    "probeinterface>=0.2.26",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.0",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "typer>=0.15.2",
    "typing-extensions>=4.13.2",
    "umap-learn>=0.5.7",
]

[tool.uv.sources]
audioio = { git = "https://github.com/bendalab/audioio" }

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.uv]
package = true

[project.scripts]
collect_peaks = "thunderpulse.collection.collect_peaks:app"
sample_peaks = "thunderpulse.sampling.sample_peaks:app"
label_peaks = "thunderpulse.labeling.label_peaks:app"
explore = "thunderpulse.exploration:app"
train_classifier = "thunderpulse.classification.train_classifier:app"
classify_peaks = "thunderpulse.classification.classify_peaks:app"
